--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mdrenderer",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "dompurify": "^3.2.1",
     "marked": "^15.0.2",
     "motion": "^11.11.17",
+    "popups": "^1.1.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
