--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@simondmc/popup-js": "^1.4.3",
     "bootstrap-icons": "^1.11.3",
     "dompurify": "^3.2.1",
     "marked": "^15.0.2",
     "motion": "^11.11.17",
-    "popups": "^1.1.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
